--- a/src/templates/user_projects/LAN/dashboard.html
+++ b/src/templates/user_projects/LAN/dashboard.html
@@ -3,9 +3,9 @@
 {% block link_stuff %}
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/enumeration.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/dashboard.css' %}">
     {% endblock link_stuff %}
-    <tittle>{% block page_title %} Passive Scanning Techniques{% endblock page_title %}</tittle>
+    <tittle>{% block page_title %}Dashboard{% endblock page_title %}</tittle>
 </head>
 {% block container_content %}
 <div class="sidenav">
@@ -74,7 +74,7 @@
 <div class="row" id="user_info">
     <div class="col-md-12">
         <pre style="text-align: center">
-          <i><b>All Enumeration techniques are listed in the sidebar.</b></i>
+          <i><b>----  ----</b></i>
         </pre>
         <br>
     </div>
