--- a/src/templates/user_projects/WAN/WanDashboard.html
+++ b/src/templates/user_projects/WAN/WanDashboard.html
@@ -15,13 +15,37 @@
     <div class="dropdown-container">
         <div class="dropdown-header" id="header_1">Passive Recon</div>
         <input type="button" class="btn btn-link" value="whois-lookup" name="whois" id="whois-btn">
-        <input type="button" class="btn btn-link" value="recursive-dns-query" name="recdns" id="recdns-btn">
         <div class="dropdown-header" id="header_2">Active Recon</div>
-        <input type="button" class="btn btn-link" value="recursive-dns-query" name="recdns" id="recdnss-btn">
+        <input type="button" class="btn btn-link" value="recursive-dns" name="recdns" id="recdnss-btn">
     </div>
 </div>
 
+<br>
+
+<br>
+<br>
+<div class="ajax_loader">
+    <div class="spinner-grow spinner-pos" role="status">
+        <span class="sr-only">Loading..</span>
+    </div>
+</div>
+<div id="whois-results">
+    <table class="table table-dark" id="result_whois_table">
+        <thead>
+        <tr>
+            <th scope="col">Domain Name</th>
+            <th scope="col">Whois Server</th>
+            <th scope="col">Name Servers</th>
+            <th scope="col">Contact Ε-Μails</th>
+            <th scope="col">Address</th>
+            <th scope="col">City</th>
+        </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+</div>
 <!-- JavaScript for the sidebar  & for hide buttons -->
-<script src="{% static 'JavaScript/main.js'%}"></script>
+<script src="{% static 'JavaScript/wan.js'%}"></script>
 
 {% endblock container_content %}
