--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -32,7 +32,7 @@
                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Start a new project
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navBarDropDownMenuLink">
+                <div class="dropdown-menu" aria-labelledby="navBarDropDownMenuLink" id="DropDownBase">
                     <a class="dropdown-item" href="{% url 'New_Lan' %}">Local area network</a>
                     <a class="dropdown-item" href="{% url 'New_Wan'%}">Wide area network</a>
                 </div>
