--- a/src/templates/user_projects/WAN/WANSettings.html
+++ b/src/templates/user_projects/WAN/WANSettings.html
@@ -9,6 +9,8 @@
     <div style="align-content: center" class="col-md-4">
         <div style="text-align: center" class="alert alert-dark" role="alert">
           <h4 class="alert-heading"><i>Wide Area Project(scan remote domains or IP's)</i></h4>
+            <br>
+            The domain name or IP address will be used for later testing.
         </div>
     </div>
 </div>
