--- a/src/templates/user_projects/WAN/WanDashboard.html
+++ b/src/templates/user_projects/WAN/WanDashboard.html
@@ -22,7 +22,7 @@
             </form>
             <br>
         <div class="dropdown-header" id="header_2">Active Recon</div>
-        <input type="button" class="btn btn-link" value="recursive-dns" name="recdns" id="recdns-btn">
+        <!--<input type="button" class="btn btn-link" value="recursive-dns" name="recdns" id="recdns-btn"> -->
         <br>
         <input type="button" class="btn btn-link" value="SYN Port Scan" name="synscan" id="portscan-btn">
         <br>
